# GBTXIAOTUDOUAI

./: .cline-memory.md  .clinerules  .dockerignore  .env.example  .gbt_keys.db  .gitignore  .gitmodules  AUDIT_REPORT.json  AUTO_FIX_PLAN.json  BOUNTY_REPORT_GBT-MQJMW8V6.json  BOUNTY_REPORT_GBT-MQJMYJCR.json  BOUNTY_REPORT_GBT-MQJMYJCR.md  BOUNTY_REPORT_GBT-MQJSEI01.json  BOUNTY_REPORT_GBT-MQJSEI01.md  BOUNTY_REPORT_GBT-MQJSEIAA.md  BOUNTY_REPORT_GBT-MQJUICRR.md  BOUNTY_REPORT_GBT-MQK046D7.json  BOUNTY_REPORT_GBT-MQK04UKP.json  BOUNTY_REPORT_GBT-MQK04UKP.md  BOUNTY_REPORT_GBT-MQK0JM23.json  BOUNTY_REPORT_GBT-MQK0JM23.md  BOUNTY_REPORT_GBT-MQMDS167.json  BOUNTY_REPORT_GBT-MQMDS167.md  BOUNTY_REPORT_GBT-MQMDS7VS.json  BOUNTY_REPORT_GBT-MQMDS7VS.md  BOUNTY_REPORT_GBT-MQMGHTMN.json  BOUNTY_REPORT_GBT-MQMLX7DQ.md  BOUNTY_REPORT_GBT-MQMLXF6B.json  BOUNTY_REPORT_GBT-MQMLXZMO.json  BOUNTY_REPORT_GBT-MQMLXZMO.md  BOUNTY_REPORT_GBT-MQMLY3PJ.json  BOUNTY_REPORT_GBT-MQMLZXFE.md  BOUNTY_REPORT_GBT-MQMMDIVP.json  BOUNTY_REPORT_GBT-MQMMDIVP.md  BOUNTY_REPORT_GBT-MQMMDVHR.md  BOUNTY_REPORT_GBT-MQNLXVKP.json  BOUNTY_REPORT_GBT-MQNLZZ7G.json  BOUNTY_REPORT_GBT-MQNLZZ7G.md  BOUNTY_REPORT_GBT-MQNM0ECX.md  BOUNTY_REPORT_GBT-MQNM1AA3.json  (+824 more)
GBTXIAOTUDOUAI/: _test_linkgen.py
agents/: __init__.py  gbt_agent.py
app/: .gitignore  PRODUCTION_AUDIT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src-tauri/: Cargo.toml  Info.plist  main.desktop  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
data/: memory_store.json
desktop/: __init__.py  app.py  app.py.bak2  app_launcher.py
docs/: ENGINEERING_IRON_LAW.md
gbt/: __init__.py  a_share_rules.py  account.py  agent.py  agents.py  ai_operator.py  autopilot.py  backtest.py  brain.py  capabilities.py  cloud_kv.py  config.py  context_engine.py  dashboard.html  database.py  desktop_app.py  desktop_ctl.py  device_caps.py  ea_engine.py  evolve.py  guard.py  key_manager.py  key_window.py  keydb.py  knowledge_base.py  linkgen.py  llm.py  llm_metrics.py  llm_reasoner.py  mcp.py  memory.py  message.py  mirror.py  ocr.py  paper_account.py  protocol.py  providers.py  react.py  reasoner.py  risk_ctrl.py  (+13 more)
gbt_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
installer/: gbt.iss
mirror_dimension/: README.md  __init__.py  auditor.py  fixer.py  (+4 more)
(+742 files in other folders)
