[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbt-agent-framework"
version = "1.5.1"
description = "GBT全能开发者 — AI原生Agent框架 | A股自主交易终端"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "GBTxiaotudou", email = "paysssk-creator@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "ollama>=0.4",
    "Pillow>=10.0",
    "pyautogui>=0.9",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
    "pyperclip>=1.8",
    "psutil>=5.9",
]

[project.optional-dependencies]
full = [
    "flask>=3.0",
    "tesserocr>=2.6",
    "easyocr>=1.7",
    "opencv-python>=4.8",
    "screeninfo>=0.8",
    "pycaw>=20230407",
    "bleak>=0.21",
    "win10toast>=0.9",
]
desktop = [
    "flask>=3.0",
    "pywebview>=5.0",
    "screeninfo>=0.8",
]
build = [
    "pyinstaller>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/paysssk-creator/GBTXIAOTUDOUAI"
Repository = "https://github.com/paysssk-creator/GBTXIAOTUDOUAI"

[project.scripts]
gbt = "gbt.cli:main"
gbt-desktop = "desktop.app:main"

[tool.setuptools.packages.find]
include = ["gbt*", "agents*", "tools*", "desktop*"]
