[package]
name = "gbt-app"
version = "1.5.2"
description = "GBT AI Workstation desktop shell"
authors = ["GBTxiaotudou"]
edition = "2021"

[lib]
name = "gbt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gbt-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
directories = "5"
anyhow = "1"
thiserror = "1"
opener = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
